; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_bundle.c_bundle_IsSet.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_bundle.c_bundle_IsSet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fdescriptor = type { i32 }
%struct.bundle = type { %struct.TYPE_9__, %struct.TYPE_8__, %struct.TYPE_10__, %struct.datalink* }
%struct.TYPE_9__ = type { i32 }
%struct.TYPE_8__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32 }
%struct.TYPE_10__ = type { i32 }
%struct.datalink = type { i32, %struct.datalink* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fdescriptor*, i32*)* @bundle_IsSet to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bundle_IsSet(%struct.fdescriptor* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.fdescriptor*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.bundle*, align 8
  %7 = alloca %struct.datalink*, align 8
  store %struct.fdescriptor* %0, %struct.fdescriptor** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load %struct.fdescriptor*, %struct.fdescriptor** %4, align 8
  %9 = call %struct.bundle* @descriptor2bundle(%struct.fdescriptor* %8)
  store %struct.bundle* %9, %struct.bundle** %6, align 8
  %10 = load %struct.bundle*, %struct.bundle** %6, align 8
  %11 = getelementptr inbounds %struct.bundle, %struct.bundle* %10, i32 0, i32 3
  %12 = load %struct.datalink*, %struct.datalink** %11, align 8
  store %struct.datalink* %12, %struct.datalink** %7, align 8
  br label %13

13:                                               ; preds = %24, %2
  %14 = load %struct.datalink*, %struct.datalink** %7, align 8
  %15 = icmp ne %struct.datalink* %14, null
  br i1 %15, label %16, label %28

16:                                               ; preds = %13
  %17 = load %struct.datalink*, %struct.datalink** %7, align 8
  %18 = getelementptr inbounds %struct.datalink, %struct.datalink* %17, i32 0, i32 0
  %19 = load i32*, i32** %5, align 8
  %20 = call i64 @descriptor_IsSet(i32* %18, i32* %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %16
  store i32 1, i32* %3, align 4
  br label %53

23:                                               ; preds = %16
  br label %24

24:                                               ; preds = %23
  %25 = load %struct.datalink*, %struct.datalink** %7, align 8
  %26 = getelementptr inbounds %struct.datalink, %struct.datalink* %25, i32 0, i32 1
  %27 = load %struct.datalink*, %struct.datalink** %26, align 8
  store %struct.datalink* %27, %struct.datalink** %7, align 8
  br label %13

28:                                               ; preds = %13
  %29 = load %struct.bundle*, %struct.bundle** %6, align 8
  %30 = getelementptr inbounds %struct.bundle, %struct.bundle* %29, i32 0, i32 2
  %31 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %30, i32 0, i32 0
  %32 = load i32*, i32** %5, align 8
  %33 = call i64 @descriptor_IsSet(i32* %31, i32* %32)
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %36

35:                                               ; preds = %28
  store i32 1, i32* %3, align 4
  br label %53

36:                                               ; preds = %28
  %37 = load %struct.bundle*, %struct.bundle** %6, align 8
  %38 = getelementptr inbounds %struct.bundle, %struct.bundle* %37, i32 0, i32 1
  %39 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %38, i32 0, i32 0
  %40 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %39, i32 0, i32 0
  %41 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %40, i32 0, i32 0
  %42 = load i32*, i32** %5, align 8
  %43 = call i64 @descriptor_IsSet(i32* %41, i32* %42)
  %44 = icmp ne i64 %43, 0
  br i1 %44, label %45, label %46

45:                                               ; preds = %36
  store i32 1, i32* %3, align 4
  br label %53

46:                                               ; preds = %36
  %47 = load %struct.bundle*, %struct.bundle** %6, align 8
  %48 = getelementptr inbounds %struct.bundle, %struct.bundle* %47, i32 0, i32 0
  %49 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %48, i32 0, i32 0
  %50 = load i32, i32* %49, align 8
  %51 = load i32*, i32** %5, align 8
  %52 = call i32 @FD_ISSET(i32 %50, i32* %51)
  store i32 %52, i32* %3, align 4
  br label %53

53:                                               ; preds = %46, %45, %35, %22
  %54 = load i32, i32* %3, align 4
  ret i32 %54
}

declare dso_local %struct.bundle* @descriptor2bundle(%struct.fdescriptor*) #1

declare dso_local i64 @descriptor_IsSet(i32*, i32*) #1

declare dso_local i32 @FD_ISSET(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
